# LightEngine3

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md  conanfile.txt
apps/: 01_hello_opengl.cpp  02_moving_car.cpp  CMakeLists.txt  main.cpp
apps/00_lua_playground/: CMakeLists.txt  main.cpp
apps/00_playground/: CMakeLists.txt  main.cpp
apps/01_hello_opengl/: CMakeLists.txt  main.cpp
apps/02_moving_car/: CMakeLists.txt  main.cpp
apps/03_racing_shooter/: CMakeLists.txt  main.cpp
apps/04_point_clouds/: CMakeLists.txt  main.cpp
apps/05_drones/: CMakeLists.txt  main.cpp
apps/06_physics_demo/: CMakeLists.txt  main.cpp
apps/07_flappy_lua/: CMakeLists.txt  main.cpp
apps/demos/: 01_hello_opengl.cpp  02_moving_car.cpp  03_ps1_shooter.cpp  04_lighting.cpp  05_animation.cpp
editor/: CMakeLists.txt  editor.cpp  editor.fbp  editor_glpanel.cpp  editor_glpanel.h  noname.cpp  noname.h
editor/include/: editor.h  editor_asset_properties.h  editor_bookkeeping.h  editor_consts.h  editor_gizmo.h  editor_glpanel.h  editor_input.h  editor_math.h  editor_modes.h  editor_object_properties.h  editor_ui.h  le3ed_cache.h  le3ed_component.h  le3ed_constants.h  le3ed_editor_systems.h  le3ed_events.h  le3ed_gui.h  le3ed_logic.h  le3ed_project.h  le3ed_project_browser.h
editor/include/commands/: le3ed_com_add_material.h  le3ed_com_add_mesh.h  le3ed_com_add_shader.h  le3ed_com_add_texture.h  le3ed_com_delete_material.h  le3ed_com_delete_mesh.h  le3ed_com_delete_objects.h  le3ed_com_delete_shader.h  le3ed_com_delete_texture.h  le3ed_com_duplicate.h  le3ed_com_property_change.h  le3ed_com_reparent.h
editor/include/components/: le3ed_gui.h  le3ed_hotkeys.h  le3ed_scenes.h  le3ed_scripts.h  le3ed_wintitle.h
editor/include/icons/: icon_addambientlight.xpm  icon_adddirectionallight.xpm  icon_addspotlight.xpm  icon_bulletcollision.xpm  icon_collision.xpm  icon_delete.xpm  icon_duplicate.xpm  icon_gizmo_move.xpm  icon_gizmo_rotate.xpm  icon_gizmo_scale.xpm  icon_gizmo_select.xpm  icon_new.xpm  icon_newcone.xpm  icon_newcube.xpm  icon_newcylinder.xpm  icon_newempty.xpm  icon_newsphere.xpm  icon_newstaticmesh.xpm  icon_newtorus.xpm  icon_none.xpm  icon_open.xpm  icon_redo.xpm  icon_reparent.xpm  icon_save.xpm  icon_saveas.xpm  icon_skeleton.xpm  icon_undo.xpm
editor/include/widgets/: le3ed_popup.h  le3ed_properties_panel.h  le3ed_settings_panel.h  le3ed_sidepanel_top.h  le3ed_tab_assets.h  le3ed_tab_content.h  le3ed_tab_scene.h  le3ed_toolbar.h  le3ed_toolbar_button.h  le3ed_toolbox.h
editor/src/: editor.cpp  editor_asset_properties.cpp  editor_bookkeeping.cpp  editor_gizmo.cpp  editor_glpanel.cpp  editor_main.cpp  editor_math.cpp  editor_modes.cpp  editor_object_properties.cpp  editor_ui.cpp  le3ed_cache.cpp  le3ed_editor_systems.cpp  le3ed_gui.cpp  le3ed_logic.cpp  le3ed_project.cpp  le3ed_project_browser.cpp  main.cpp
editor/src/commands/: le3ed_com_add_material.cpp  le3ed_com_add_mesh.cpp  le3ed_com_add_shader.cpp  le3ed_com_add_texture.cpp  le3ed_com_delete_material.cpp  le3ed_com_delete_mesh.cpp  le3ed_com_delete_objects.cpp  le3ed_com_delete_shader.cpp  le3ed_com_delete_texture.cpp  le3ed_com_duplicate.cpp  le3ed_com_property_change.cpp  le3ed_com_reparent.cpp
editor/src/components/: le3ed_gui.cpp  le3ed_hotkeys.cpp  le3ed_scenes.cpp  le3ed_scripts.cpp  le3ed_wintitle.cpp
editor/src/widgets/: le3ed_popup.cpp  le3ed_properties_panel.cpp  le3ed_settings_panel.cpp  le3ed_sidepanel_top.cpp  le3ed_tab_assets.cpp  le3ed_tab_content.cpp  le3ed_tab_scene.cpp  le3ed_toolbar.cpp  le3ed_toolbar_button.cpp  le3ed_toolbox.cpp
editor/ui/: editor.fbp  noname.cpp  noname.h
le3/: CMakeLists.txt  annotations.lua  annotations.lua.old
le3/include/: _imgui.h  le3.h  le3_animation.h  le3_application.h  le3_application_settings.h  le3_asset_manager.h  le3_bsp.h  le3_camera.h  le3_config.h  le3_dat_archive.h  le3_dat_file.h  le3_dat_filesystem.h  le3_draw_queue.h  le3_drawable_object.h  le3_editor_manager.h  le3_engine_sprites.h  le3_engine_state.h  le3_engine_systems.h  le3_event_manager.h  le3_framebuffer.h  le3_game_engine_state.h  le3_game_logic.h  le3_geometry.h  le3_gizmo.h  le3_imgui_utils.h  le3_input.h  le3_light.h  le3_light_manager.h  le3_material.h  le3_math_utils.h  le3_mesh.h  le3_model.h  le3_network_spinner.h  le3_networking.h  le3_object.h  le3_physics.h  le3_physics_manager.h  le3_point_cloud.h  le3_primitives.h  le3_print.h  (+18 more)
le3/include/le3/: le3.h
le3/include/sprites/: le3_engine_pointlight.xpm  sprite_engine_ambientlight.xpm  sprite_engine_directionallight.xpm  sprite_engine_pointlight.xpm  sprite_engine_spotlight.xpm
le3/src/: le3_animation.cpp  le3_application.cpp  le3_asset_manager.cpp  le3_assimp.cpp  le3_bsp.cpp  le3_camera.cpp  le3_config.cpp  le3_dat_archive.cpp  le3_dat_file.cpp  le3_dat_filesystem.cpp  le3_draw_queue.cpp  le3_editor_manager.cpp  le3_engine_systems.cpp  le3_event_manager.cpp  le3_framebuffer.cpp  le3_geometry.cpp  le3_gizmo.cpp  le3_imgui_utils.cpp  le3_light.cpp  le3_light_manager.cpp  le3_material.cpp  le3_math_utils.cpp  le3_mesh.cpp  le3_model.cpp  le3_network_spinner.cpp  le3_networking.cpp  le3_object.cpp  le3_physics.cpp  le3_physics_manager.cpp  le3_point_cloud.cpp  le3_primitives.cpp  le3_print.cpp  le3_scene.cpp  le3_scene_assimp.cpp  le3_scene_manager.cpp  le3_scene_root.cpp  le3_script_bindings.cpp  le3_script_object.cpp  le3_script_system.cpp  le3_serialization.cpp  (+11 more)
le3/src/algorithms/: le3_bsp.cpp
le3/src/bindings/: le3_binding_asset_manager.cpp  le3_binding_camera.cpp  le3_binding_drawable_object.cpp  le3_binding_engine_config.cpp  le3_binding_engine_state.cpp  le3_binding_event_manager.cpp  le3_binding_geometry.cpp  le3_binding_imgui.cpp  le3_binding_input.cpp  le3_binding_light.cpp  le3_binding_material.cpp  le3_binding_model.cpp  le3_binding_object.cpp  (+13 more)
le3game/: CMakeLists.txt
le3game/include/: le3game_constants.h
le3game/src/: main.cpp
tools/pkg_resources/: CMakeLists.txt  main.cpp
tools/rotation_helper/: CMakeLists.txt  main.cpp
tools/zipdat/: CMakeLists.txt  main.cpp
(+385 files in other folders)
